grüne button und autologin bei imm_aid

--- a/basics/templates/basics/change_password.html
+++ b/basics/templates/basics/change_password.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 <!-- Introduction Row -->
-	<div class="modal-dialog" id="sign-up">
+	<div id="standard-modal">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h1 class="text-center">Change Your Password</h1>
 			</div>
 			<div class="modal-body">
-				<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+				<form class="form" role="form" method="post" accept-charset="UTF-8">
 				    {% csrf_token %}
 					{% if change == True %}
 					<p> couldn't change password, please try again </p>
@@ -26,7 +26,7 @@
 					</div>
 
 					<div class="form-group">
-					<input type="submit" class="btn btn-block btn-lg btn-primary" value="Save"/>
+					<input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Save"/>
 					</div>
 				</form>
 			</div>
