needs_all ajax, claim_ajax, bugfixes

--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -315,7 +315,7 @@
                                     </a>
                                     <div class="list-group-footer">
                                         <div class="row">
-                                            <a class="list-group-footer-button" type="button" href="">
+                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:need_edit' pk=elem.pk%}">
                                                 <div class="col-sm-6" id="list-group-footer-button-margin">
                                                     <span class="glyphicon glyphicon-pencil"></span> Edit
                                                 </div>
