--- a/basics/templates/basics/chat.html
+++ b/basics/templates/basics/chat.html
@@ -14,7 +14,7 @@
     <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 
   <body>
-  <div class = "row " style="box-shadow: 0 0 30px black; height:70%; border-radius: 1em;" >
+  <div class = "row " style="min-height: 500px; box-shadow: 0 0 30px black; height:70%; border-radius: 1em;" >
     <!--<div class="col-md-4">
       <div class="card card-block">
         <h4 class="card-title">Card title</h4>
@@ -34,14 +34,16 @@
       </div>
       <a href="{% url 'basics:kick_user' roomname=roomname %}" class="btn btn-primary">Kick User</a>
     </div>-->
-    <div class="col-md-4 col-xs-12" style="background-color: #d1d1d1; height:100%">
-      <div class="card card-block" >
-        <h4 class="card-title">Your Chats</h4>
+    <div class="col-md-4 col-xs-12" style="min-height: 500px; background-color: #d1d1d1; height:100%;position:relative;">
+      <div class="card card-block"  style="height:90%; position:relative;">
+        <h4 class="card-title" style="position: relativ; height:5%;">Your Chats</h4>
           <div id="rooms-container">
           </div>
+
+
       </div>
     </div>
-    <div class="col-md-8 col-xs-12" id="app"></div>
+    <div class="col-md-8 col-xs-12 shadow-small" id="app"></div>
     </div>
     <script>
 'use strict';
@@ -401,7 +403,7 @@
       {className:'goupe-list-element ', id:'standard-list-group-item-div', href:"/chat/"+props['room']['hash'] },
       React.createElement(
         'div',
-          {className:'col-sm-11 col-xs-3 grey room',  id:'standart-modal'},
+          {className:'col-sm-11 grey room',  id:'standart-modal'},
         React.createElement(
           'div',
           {className:''},
