--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -2,6 +2,68 @@
 {% load filter%}
 {% block content %}
 
+<style>
+
+.list-group-footer {
+    border: 1px solid #ddd;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    padding: 10px 15px;
+    text-align: center;
+    background-color: #EDEDED;
+}
+
+.list-group-footer-button {
+    color: #70962c;
+}
+
+.list-group-footer-button:hover {
+    color: #bbd153;
+    text-decoration:none;
+}
+
+@media(max-width:768px) {
+
+    #list-group-footer-button-margin {
+        margin-bottom: 10px;
+    }
+
+}
+
+
+.pagination {
+    margin: 0px;
+}
+
+#pagination-left-right {
+    padding: 0.5em 0.5em;
+    color: #70962c;
+}
+
+#pagination-left-right:hover {
+    background-color: #EDEDED;
+}
+
+#pagination-number {
+    height: calc(2em + 2px);
+    border: 1px solid #ddd;
+    background-color: #FFFFFF;
+    color: #70962c;
+}
+
+#pagination-number:hover {
+    background-color: #EDEDED;
+}
+
+#pagination-number-active{
+    height: calc(2em + 2px);
+    border: 1px solid #ddd;
+    background-color: #EDEDED;
+    color: #70962c;
+}
+
+</style>
+
 <!-- needs -->
 <div id="standard-modal" style="margin-bottom: 90px;">
     <div class="modal-content">
@@ -55,12 +117,14 @@
                 </form>
             </div>
         </div>
-        <div class="modal-body">
-            <div class="list-group">
+        <div class="modal-body" style="padding-bottom: 0px;">
+            <div class="list-group" style="margin-bottom: 0px;">
                 {% if needs %}
                     {% for need in needs %}
 
                         <!-- list all needs -->
+                        <div class="row">
+                            <div class="col-sm-12">
                         <a class="list-group-item" id="standard-list-group-item-div">
                             <div class="row">
                                 <div class="col-sm-12" data-toggle="modal" data-target=".{{ need.id }}">
@@ -68,24 +132,38 @@
                                     <p class="list-group-item-text">{{ need|get_short_text:160 }}</p>
                                 </div>
                                 <div class="col-sm-9" data-toggle="modal" data-target=".{{ need.id }}">
-                                    <h6><br>from: {{ need.date }} / category: {{ need.categorie.name }} / group: {{ need.group }} </h6>
+                                    <h6><br>from: {{ need.date }} / category: {{ need.categorie.name }}{% if need.group %} / by: <span style="color: #70962c;">{{ need.group.name }}</span>{% endif %}</h6>
                                 </div>
-                                <div class="col-sm-1">
-                                    <button type="button" id="{{ need.id }}" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:needs_help' id=need.id %}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-comment"></span> Help</button>
-
-                                </div>
-                                <div class="col-sm-1"></div>
-                                {% if not user.userdata in need.reported_by.all %}
-                                  <div class="col-sm-1">
-                                    <button type="button" id="{{ need.id }}" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:report_need' pk=need.pk %}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-alert"></span> Report</button>
-                                  </div>
-                                {% else %}
-                                  <div class="col-sm-1">
-                                    <button type="button" class="btn btn-default btn-sml standard-grey-button-light disabled" onclick="#" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-alert"></span> Report</button>
-                                  </div>
-                                {% endif %}
                             </div>
                         </a>
+
+                        <div class="list-group-footer" style="margin-bottom: 15px;">
+                            {% if not user.userdata in need.reported_by.all %}
+                                <div class="row">
+                                    <a class="list-group-footer-button" type="button" href="{% url 'basics:needs_help' id=need.id %}">
+                                        <div class="col-sm-6" id="list-group-footer-button-margin">
+                                            <span class="glyphicon glyphicon-comment"></span> Help
+                                        </div>
+                                    </a>
+                                    <a class="list-group-footer-button" type="button" href="{% url 'basics:report_need' pk=need.pk %}">
+                                        <div class="col-sm-6">
+                                            <span class="glyphicon glyphicon-ban-circle"></span> Report
+                                        </div>
+                                    </a>
+                                </div>
+                            {% else %}
+                                <div class="row">
+                                    <a class="list-group-footer-button" type="button" href="{% url 'basics:needs_help' id=need.id %}">
+                                        <div class="col-sm-12">
+                                            <span class="glyphicon glyphicon-comment"></span> Help
+                                        </div>
+                                    </a>
+                                </div>
+                            {% endif %}
+                        </div>
+
+                            </div>
+                        </div>
 
                         <!-- modal for every need -->
                         <div class="modal fade {{ need.id }}"  role="dialog" aria-labelledby="request" aria-hidden="true">
@@ -96,20 +174,17 @@
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                         <h2>{{need.headline}}</h2>
-                                        <h6>from: {{ need.date }} / category: {{ need.categorie.name }} </h6>
+                                        <h6>from: {{ need.date }} / category: {{ need.categorie.name }}{% if need.group %} / by: <a id="green-link" href="{% url 'basics:group_detail_for_user' name=need.group.name %}">{{ need.group.name }}</a>{% endif %}</h6>
                                     </div>
                                     <div class="modal-body">
                                         <p>{{ need.text|linebreaksbr }}</p>
                                     </div>
                                     <div class="modal-footer">
-
-                                        <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:needs_help' id=need.id %}';" ><span class="glyphicon glyphicon-comment"></span>Help</button>
+                                        <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:needs_help' id=need.id %}';" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-comment"></span> Help</button>
                                         {% if not user.userdata in need.reported_by.all %}
-                                          <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:report_need' pk=need.pk %}';"><span class="glyphicon glyphicon-alert"></span> Report</button>
-                                        {% else %}
-                                          <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light disabled" onclick="#"><span class="glyphicon glyphicon-alert"></span> Report</button>
+                                          <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:report_need' pk=need.pk %}';" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-ban-circle"></span> Report</button>
                                         {% endif %}
-                                        <button id="standard-grey-button-bold" type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                                        <button id="standard-grey-button-bold" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-bottom: 10px;">Close</button>
                                     </div>
                                 </div>
                             </div>
@@ -120,30 +195,36 @@
                 {% endif %}
             </div>
         </div>
+        <div class="modal-footer">
+            <div class="row">
+                <div class="col-xs-12 col-sm-offset-2 col-sm-8 text-center">
+                    <nav>
+                        <ul class="pagination">
+                            <li {% if 1 == page %}class="disabled"{% endif %}><a id="pagination-left-right" value="{{number}}" onclick="submit_page(this)" aria-label="Previous"><span aria-hidden="true" class="glyphicon glyphicon-menu-left"></span></a></li>
+                            {% for number in page_range %}
+                                {% if number == page %}
+                                    <li class="active"><a id="pagination-number-active" onclick="submit_page(this)" value="{{number}}">{{number}} <span class="sr-only">(current)</span></a></li>
+                                {% else %}
+                                    <li><a id="pagination-number" onclick="submit_page(this)" value="{{number}}">{{number}}</a></li>
+                                {% endif %}
+                            {% endfor %}
+                            <li>
+                                <a id="pagination-left-right" onclick="submit_page(this)" value="{{number}}" aria-label="Next">
+                                    <span aria-hidden="true" class="glyphicon glyphicon-menu-right"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
-<div class="row">
-  <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ] text-center">
-    <nav>
-      <ul class="pagination">
-          <li {% if 1 == page %}class="disabled"{% endif %}><a value="{{number}}" onclick="submit_page(this)" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-        {% for number in page_range %}
-          {% if number == page %}
-            <li class="active"><a style="background:#71952F; border: 1px solid #71952F;" onclick="submit_page(this)" value="{{number}}">{{number}} <span class="sr-only">(current)</span></a></li>
-          {% else %}
-            <li><a onclick="submit_page(this)" value="{{number}}" style="color: #71952F;">{{number}}</a></li>
-          {% endif %}
-        {% endfor %}
-        <li>
-          <a onclick="submit_page(this)" value="{{number}}" aria-label="Next">
-            <span aria-hidden="true" style="color: #71952F;">&raquo;</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</div>
-  <script>
+
+<!-- &laquo; -->
+
+<script>
     function submit_page(button){
       var button = $(button).attr("value");
       $("#page").val(button);
