--- a/basics/templates/basics/need_edit.html
+++ b/basics/templates/basics/need_edit.html
@@ -11,10 +11,10 @@
 				<form class="form" role="form" method="post" accept-charset="UTF-8">
 				    {% csrf_token %}
     				<div class="form-group">
-					    <input type="description" class="form-control input-lg" placeholder= "headline" name="desc"  >
+					    <input type="description" class="form-control input-lg" placeholder= "headline" value="{{need.headline}}" name="desc"  >
 					</div>
 					<div class="form-group">
-					    <input type="description" class="form-control input-lg" placeholder= "description" name="text"  >
+					    <textarea type="text" class="form-control input-lg" placeholder= "description" value="" name="text"  >{{need.text}}</textarea>
 					</div>
 					<div class="form-group">
 						{% include "basics/map_testing.html" %}
