--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -289,7 +289,7 @@
                                   </div>
                                   <div class="list-group-footer">
                                       <div class="row">
-                                          <a class="list-group-footer-button" type="button" href="">
+                                          <a class="list-group-footer-button" type="button" href="{% url 'basics:information_update' pk=elem.pk%}">
                                               <div class="col-sm-12">
                                                   <span class="glyphicon glyphicon-refresh"></span> Update
                                               </div>
