change Up Vote to Upvote

--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -133,7 +133,7 @@
                                             <div class="row">
                                                 <a class="list-group-footer-button" type="button" href="{% url 'basics:like_information' pk=info.id %}">
                                                     <div class="col-sm-4" id="list-group-footer-button-margin">
-                                                        <span class="glyphicon glyphicon-chevron-up"></span> Up Vote
+                                                        <span class="glyphicon glyphicon-chevron-up"></span> Upvote
                                                     </div>
                                                 </a>
                                                 <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
@@ -151,7 +151,7 @@
                                             <div class="row">
                                                 <a class="list-group-footer-button" type="button" href="{% url 'basics:like_information' pk=info.id %}">
                                                     <div class="col-sm-6" id="list-group-footer-button-margin">
-                                                        <span class="glyphicon glyphicon-chevron-up"></span> Up Vote
+                                                        <span class="glyphicon glyphicon-chevron-up"></span> Upvote
                                                     </div>
                                                 </a>
                                                 <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
