--- a/basics/templates/snippets/info_filter.html
+++ b/basics/templates/snippets/info_filter.html
@@ -12,7 +12,7 @@
                                 </div>
 
                                 <div class="col-sm-9">
-                                    <h6 style="color: #555; hover.color: #555;"><br>{{ info.priority }} / from: {{ info.date }} / number of reports: {{ info.number_reports }} / group: {{ info.group }}</h6>
+                                    <h6 style="color: #555; hover.color: #555;"><br>priority: {{ info.priority }} / from: {{ info.date }} / number of reports: {{ info.number_reports }} / group: {{ info.group }}</h6>
                                 </div>
                             </a>
                             <div class="col-sm-1">
