--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -165,28 +165,21 @@
                         </a>
 
                         <div class="list-group-footer" style="margin-bottom: 15px;">
-                            {% if not user.userdata in need.reported_by.all %}
                                 <div class="row">
                                     <a class="list-group-footer-button" type="button" href="{% url 'basics:needs_help' id=need.id %}">
                                         <div class="col-sm-6" id="list-group-footer-button-margin">
                                             <span class="glyphicon glyphicon-comment"></span> Help
                                         </div>
                                     </a>
-                                    <a class="list-group-footer-button" type="button" href="{% url 'basics:report_need' pk=need.pk %}">
+                                    {% if not user.userdata in need.reported_by.all %}
+                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="report{{need.pk}}"" onclick="report({{need.pk}})"">
                                         <div class="col-sm-6">
-                                            <span class="glyphicon glyphicon-ban-circle"></span> Report
+                                            <span class="glyphicon glyphicon-ban-circle"></span>Report
                                         </div>
                                     </a>
+                                    {% endif %}
                                 </div>
-                            {% else %}
-                                <div class="row">
-                                    <a class="list-group-footer-button" type="button" href="{% url 'basics:needs_help' id=need.id %}">
-                                        <div class="col-sm-12">
-                                            <span class="glyphicon glyphicon-comment"></span> Help
-                                        </div>
-                                    </a>
-                                </div>
-                            {% endif %}
+
                         </div>
 
                             </div>
@@ -209,7 +202,7 @@
                                     <div class="modal-footer">
                                         <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:needs_help' id=need.id %}';" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-comment"></span> Help</button>
                                         {% if not user.userdata in need.reported_by.all %}
-                                          <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:report_need' pk=need.pk %}';" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-ban-circle"></span> Report</button>
+                                          <button  type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="report({{need.pk}})"" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-ban-circle"></span>Report</button>
                                         {% endif %}
                                         <button id="standard-grey-button-bold" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-bottom: 10px;">Close</button>
                                     </div>
@@ -227,16 +220,16 @@
                 <div class="col-xs-12 col-sm-offset-2 col-sm-8 text-center">
                     <nav>
                         <ul class="pagination">
-                            <li {% if 1 == page %}class="disabled"{% endif %}><a id="pagination-left-right" value="{{number}}" onclick="submit_page(this)" aria-label="Previous"><span aria-hidden="true" class="glyphicon glyphicon-menu-left"></span></a></li>
+                            <li style="cursor:pointer" {% if 1 == page %}class="disabled"{% endif %}><a id="pagination-left-right" value="{{number}}" onclick="submit_page(this)" aria-label="Previous"><span aria-hidden="true" class="glyphicon glyphicon-menu-left"></span></a></li>
                             {% for number in page_range %}
                                 {% if number == page %}
                                     <li class="active"><a id="pagination-number-active" onclick="submit_page(this)" value="{{number}}">{{number}} <span class="sr-only">(current)</span></a></li>
                                 {% else %}
-                                    <li><a id="pagination-number" onclick="submit_page(this)" value="{{number}}">{{number}}</a></li>
+                                    <li><a id="pagination-number" onclick="submit_page(this)" style="cursor:pointer" value="{{number}}">{{number}}</a></li>
                                 {% endif %}
                             {% endfor %}
                             <li>
-                                <a id="pagination-left-right" onclick="submit_page(this)" value="{{number}}" aria-label="Next">
+                                <a id="pagination-left-right" style="cursor:pointer" onclick="submit_page(this)" value="{{number}}" aria-label="Next">
                                     <span aria-hidden="true" class="glyphicon glyphicon-menu-right"></span>
                                 </a>
                             </li>
@@ -324,6 +317,30 @@
       }
     });
   });
+
+</script>
+
+<script>
+
+function report(pk){
+	console.log(pk)
+
+    $.ajax({
+      	url: "report/",
+      	type: "POST",
+      	data: {csrfmiddlewaretoken: '{{ csrf_token }}', pk: pk, page: $("#page").val(), range: $("#range").val(), cards_per_page: $("#cards_per_page").val(), category: $("#category").val(), wordsearch: $("#basic-url").val()},
+
+      	success: function(data){
+        $('#insert').html(data);
+        	console.log("success");
+      	},
+
+      	error: function(xhr, errmsg, err){
+        	console.log(xhr.status + ": " + xhr.responseText);
+      	}
+    });
+
+}
 
 </script>
 
