--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -114,7 +114,7 @@
                                             <p class="list-group-item-text">{{ info|get_short_text:160 }}</p>
                                         </div>
                                         <div class="col-sm-9" data-toggle="modal" data-target=".{{ info.id }}">
-                                            <h6><br>priority: {{ info.priority }} / from: {{ info.date }}{% if info.author_is_admin %} / by: <span style="color: #D36E5A;">Admin</span>{% elif info.group %} / by: <span style="color: #70962c;">{{ info.group.name }}</span>{% elif info.author == user %} / by: <span>you</span>{% endif %}</h6>
+                                            <h6><br>priority: {{ info.priority }} / pk: {{ info.pk }} / from: {{ info.date }}{% if info.author_is_admin %} / by: <span style="color: #D36E5A;">Admin</span>{% elif info.group %} / by: <span style="color: #70962c;">{{ info.group.name }}</span>{% elif info.author == user %} / by: <span>you</span>{% endif %}</h6>
                                         </div>
                                     </div>
                                 </a>
