--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -68,35 +68,51 @@
 <div id="standard-modal" style="margin-bottom: 90px">
     <div class="modal-content">
         <div class="modal-header">
-            <div class="row">
-                <div class="col-sm-4" style="padding: 15px">
+
+            <div class="row" style="margin-bottom: 15px;">
+                <div class="col-sm-12">
                     <h2 class="text-center" id="standard-modal-headline">Information</h2>
                 </div>
-                <form class="form" role="form" method="post" action="{% url 'basics:information_all'%}" accept-charset="UTF-8">
-                  {%csrf_token%}
-                  <div class="col-sm-2" style="margin-top: 15px; margin-bottom: 15px;">
-                      <label> Range
-                        <select style="width: 100%" name="range">
-                          <option>5km</option>
-                          <option>20km</option>
-                          <option>40km</option>
-                        </select>
-                      </label>
-                  </div>
-                  <div  class="col-sm-2" style="margin-top: 15px; margin-bottom: 15px;">
-                      <label> Cards per page
-                        <select style="width: 100%" title="{{cards_per_page}}" name="cards_per_page">
-                            <option>1</option>
-                            <option>5</option>
-                            <option>10</option>
-                        </select>
-                      </label>
-                  </div>
-                  <div  class="col-sm-2" style="margin-top: 30px; margin-bottom: 10px;">
-                      <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Filter"/>
-                  </div>
-                </form>
             </div>
+            <form class="form" id="filter-form" role="form" method="post" action="{% url 'basics:needs_all'%}" accept-charset="UTF-8">
+            {%csrf_token%}
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="row">
+                            <div class="col-sm-4" style="margin-bottom: 15px;">
+                                <input type="text" class="form-control" id="basic-url" name="word-search" value="{{wordsearch}}" placeholder="Search" aria-describedby="basic-addon3"></input>
+                            </div>
+                            <div class="col-sm-4" style="margin-bottom: 15px;">
+                                <div class="input-group">
+                                    <span class="input-group-addon">Range:</span>
+                                    <input type="text" class="form-control" id="range" name="range" value="{{range}}" aria-describedby="basic-addon3"></input>
+                                    <span class="input-group-addon">km</span>
+                                </div>
+                            </div>
+                            <div class="col-sm-4" style="margin-bottom: 15px;">
+                                <select style="width: 100%" title="{{cards_per_page}}" name="cards_per_page" id="cards_per_page">
+                                    <option {% if 10 == cards_per_page %}selected{% endif %} value=10>10 information per page</option>
+                                    <option {% if 25 == cards_per_page %}selected{% endif %} value=25>25 information per page</option>
+                                    <option {% if 100 == cards_per_page %}selected{% endif %} value=100>100 information per page</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <input type="hidden" class="form-control" id="page" name="page" value="1"/>
+
+                <div class="row">
+                    <div class="col-sm-3" style="margin-top: 5px; margin-bottom:15px;">
+                        <input type="button" class="btn btn-block btn-lg btn-primary standard-grey-button-bold" onclick="location.href='{% url 'basics:information_all' %}'" value="Show all"/>
+                    </div>
+                    <div class="col-sm-3 col-sm-offset-6" style="margin-top: 5px;">
+                        <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Filter"/>
+                    </div>
+                </div>
+
+            </form>
         </div>
 
         <div class="modal-body" style="padding-bottom: 0px;">
