--- a/basics/static/basics/css/standard_components.css
+++ b/basics/static/basics/css/standard_components.css
@@ -188,3 +188,64 @@
     color: #bbd153;
 }
 /* ----------- end description and green link ----------- */
+
+/* ----------- start list-group-footer ----------- */
+.list-group-footer {
+    border: 1px solid #ddd;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    padding: 10px 15px;
+    text-align: center;
+    background-color: #EDEDED;
+}
+
+.list-group-footer-button {
+    color: #70962c;
+}
+
+.list-group-footer-button:hover {
+    color: #bbd153;
+    text-decoration:none;
+}
+
+@media(max-width:768px) {
+
+    #list-group-footer-button-margin {
+        margin-bottom: 10px;
+    }
+
+}
+/* ----------- end list-group-footer ----------- */
+
+/* ----------- start pagination ----------- */
+.pagination {
+    margin: 0px;
+}
+
+#pagination-left-right {
+    padding: 0.5em 0.5em;
+    color: #70962c;
+}
+
+#pagination-left-right:hover {
+    background-color: #EDEDED;
+}
+
+#pagination-number {
+    height: calc(2em + 2px);
+    border: 1px solid #ddd;
+    background-color: #FFFFFF;
+    color: #70962c;
+}
+
+#pagination-number:hover {
+    background-color: #EDEDED;
+}
+
+#pagination-number-active{
+    height: calc(2em + 2px);
+    border: 1px solid #ddd;
+    background-color: #EDEDED;
+    color: #70962c;
+}
+/* ----------- end pagination  ----------- */
