--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -2,69 +2,7 @@
 {% load filter %}
 {% block content %}
 
-<style>
-
-.list-group-footer {
-    border: 1px solid #ddd;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    padding: 10px 15px;
-    text-align: center;
-    background-color: #EDEDED;
-}
-
-.list-group-footer-button {
-    color: #70962c;
-}
-
-.list-group-footer-button:hover {
-    color: #bbd153;
-    text-decoration:none;
-}
-
-@media(max-width:768px) {
-
-    #list-group-footer-button-margin {
-        margin-bottom: 10px;
-    }
-
-}
-
-
-.pagination {
-    margin: 0px;
-}
-
-#pagination-left-right {
-    padding: 0.5em 0.5em;
-    color: #70962c;
-}
-
-#pagination-left-right:hover {
-    background-color: #EDEDED;
-}
-
-#pagination-number {
-    height: calc(2em + 2px);
-    border: 1px solid #ddd;
-    background-color: #FFFFFF;
-    color: #70962c;
-}
-
-#pagination-number:hover {
-    background-color: #EDEDED;
-}
-
-#pagination-number-active{
-    height: calc(2em + 2px);
-    border: 1px solid #ddd;
-    background-color: #EDEDED;
-    color: #70962c;
-}
-
-</style>
-
-<!-- needs -->
+<!-- information-->
 <div id="standard-modal" style="margin-bottom: 90px">
     <div class="modal-content">
         <div class="modal-header">
@@ -120,7 +58,7 @@
                 {% if infos %}
                     {% for info in infos %}
 
-                        <!-- list all needs -->
+                        <!-- list all information -->
                         <div class="row">
                             <div class="col-sm-12">
                                 <a class="list-group-item" id="standard-list-group-item-div" href="{% url 'basics:information_view' pk=info.id %}">
@@ -234,7 +172,7 @@
             </div>
         </div>
     </div>
-</div><!-- end needs -->
+</div><!-- end Information -->
 
 <div class="col-sm-1 col-sm-push-11 col-xs-3 col-xs-push-9">
     <div id="add-float-button" style="float: right; margin-right: 50px;">
