add author is admin in models; change show all button to clear filter on information all

--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -43,7 +43,7 @@
 
                 <div class="row">
                     <div class="col-sm-3" style="margin-top: 5px; margin-bottom:15px;">
-                        <input type="button" class="btn btn-block btn-lg btn-primary standard-grey-button-bold" onclick="location.href='{% url 'basics:information_all' %}'" value="Show all"/>
+                        <input type="button" class="btn btn-block btn-lg btn-primary standard-grey-button-bold" onclick="location.href='{% url 'basics:information_all' %}'" value="Clear Filter"/>
                     </div>
                     <div class="col-sm-3 col-sm-offset-6" style="margin-top: 5px;">
                         <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Filter"/>
