--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -75,7 +75,7 @@
                                             <p class="list-group-item-text">{{ need|get_short_text:160 }}</p>
                                         </div>
                                         <div class="col-sm-9" data-toggle="modal" data-target=".{{ need.id }}">
-                                            <h6><br>priority: {{ need.priority }} / pk: {{ need.pk }} / from: {{ need.date }} / category: {{ need.categorie.name }}{% if need.group %} / by: <span style="color: #70962c;">{{ need.group.name }}</span>{% endif %}</h6>
+                                            <h6><br>from: {{ need.date }} / category: {{ need.categorie.name }}{% if need.group %} / by: <span style="color: #70962c;">{{ need.group.name }}</span>{% endif %}</h6>
                                         </div>
                                     </div>
                                 </a>
@@ -123,11 +123,11 @@
                                         <p>{{ need.text|linebreaksbr }}</p>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:needs_help' id=need.id %}';" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-comment"></span> Help</button>
+                                        <button type="button" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:needs_help' id=need.id %}';" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-comment"></span> Help</button>
                                         {% if not user.userdata in need.reported_by.all %}
-                                          <button  type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="report({{need.pk}})" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-ban-circle"></span>Report</button>
+                                          <button  type="button" class="btn btn-default btn-sml standard-grey-button-light " onclick="report({{need.pk}})" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-ban-circle"></span> Report</button>
                                         {% endif %}
-                                        <button id="standard-grey-button-bold" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-bottom: 10px;">Close</button>
+                                        <button id="standard-grey-button-light" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-bottom: 10px;">Close</button>
                                     </div>
                                 </div>
                             </div>
