change cursor to pointer on timeline and needs all

--- a/basics/static/basics/css/standard_components.css
+++ b/basics/static/basics/css/standard_components.css
@@ -249,3 +249,9 @@
     color: #70962c;
 }
 /* ----------- end pagination  ----------- */
+
+/* ----------- start coursor pointer  ----------- */
+#cursor-pointer {
+    cursor: pointer;
+}
+/* ----------- end coursor pointer  ----------- */
