--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -17,6 +17,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="{% static 'basics/js/bootstrap.min.js' %}"></script>
+	<script src="{% static 'basics/js/notify.js' %}"></script>
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	<script src="https://fb.me/react-15.0.2.js"></script>
 	<script src="https://fb.me/react-dom-15.0.2.js"></script>
