--- a/basics/templates/snippets/need_filter.html
+++ b/basics/templates/snippets/need_filter.html
@@ -1,5 +1,5 @@
 {% load filter%}
-        <div class="modal-body" style="padding-bottom: 0px;">
+        <div class="modal-body" style="padding-bottom: 0px;" id="modal-body">
             <div class="list-group" style="margin-bottom: 0px;" id="need-list">
                 {% if needs %}
                     {% for need in needs %}
